test/domains/compilerErrors/notsupportedCreateBuffer-DR.chpl
use notsupportedCommon;

dfltRectangularBase.createIndexBuffer(5);
